--- a/client/src/components/Heading/heading.css
+++ b/client/src/components/Heading/heading.css
@@ -1,3 +1,17 @@
 .jumbotron-fluid {
     text-align: center;
 }
+
+#head-info {
+    font-weight: bold;
+}
+
+#me {
+    font-size: 1.5rem;
+    padding-top: 20px;
+    font-style: italic;
+}
+
+a {
+    font-weight: bold;
+}
