--- a/client/src/components/Heading/heading.css
+++ b/client/src/components/Heading/heading.css
@@ -1,16 +1,46 @@
+h1 {
+        -webkit-text-stroke: 1px black;
+    color: white;
+    text-shadow:
+        3px 1.5px 0 #000,
+        -1px -1px 0 #000,  
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+}
+
 .jumbotron-fluid {
     text-align: center;
+    background: url("http://www.aspenwords.org/wp-content/uploads/2015/11/reading-love.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 #head-info {
     font-weight: bold;
+    -webkit-text-stroke: 1px black;
+    color: white;
+    text-shadow:
+        3px 1px 0 #000,
+        -1px -1px 0 #000,  
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
 
 #me {
     font-size: 1.5rem;
     padding-top: 20px;
     font-style: italic;
+    color: white;
+    text-shadow:
+        2px 1px 0 #000,
+        -1px -1px 0 #000,  
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
+
 
 #gitme {
     font-weight: bold;
